# Fractales

./: .gitignore  Fractales.py  README.md  koch_fractal.py  pyproject.toml  requirements.txt
pages/: 1 ¿Qué son los fractales?.py
utils/: funciones.py
