[project]
name = "fractales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "htbuilder>=0.9.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "streamlit>=1.51.0",
]
